# jetbrains-simple-llm-agent

./: README.md  agent.py  pyproject.toml  server.py  test.py
